[tool.poetry]
name = "test"
version = "0.1.0"
description = "Testing some python functionalities with poetry"
authors = ["Marco <kada9001@gmail.com>"]
packages = [
    { include = "txp_test", from = "src" },
]

[tool.poetry.dependencies]
python = "^3.8"
click = "^8.0.1"
pytest = "^6.2.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
txp_test = "txp_test.main:cli_entrypoint"
